tests/NormalTests/paczka1/fuzzy1/70430203.err
Error in line 3: RAOAlx S284 30,1
Error in line 4: nxilRJ0 S593 8,8
Error in line 1: 0tDNHyWE S593 35,0
Error in line 9: 0tDNHyWE A488 4,9
Error in line 5: RAOAlx S40 64,4
Error in line 21: I3rz S593 93,5
Error in line 35: I3rz S40 33,1
